--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react-dom": "^16.13.1",
     "react-ga": "^2.7.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.1"
+    "react-router-hash-link": "^2.0.0",
+    "react-scripts": "^3.4.1",
+    "smoothscroll-polyfill": "^0.4.4"
   },
   "repository": {
     "type": "git",
