--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "homepage": "https://richardhsw.github.io/portfolio",
   "dependencies": {
+    "bootstrap": "^4.5.2",
     "classnames": "^2.2.6",
     "gh-pages": "^3.1.0",
     "lodash": "^4.17.15",
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-ga": "^2.7.0",
     "react-router-dom": "^5.1.2",
